--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.15",
+    "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
