--- a/backend/package.json
+++ b/backend/package.json
@@ -23,11 +23,14 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
+    "https-proxy-agent": "^7.0.6",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
+    "proxy-chain": "^2.5.9",
     "puppeteer": "^24.14.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "socks-proxy-agent": "^8.0.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
